{
  "version": 4,
  "terraform_version": "1.4.0",
  "serial": 360,
  "lineage": "0dcebb53-f2fa-5563-92fe-e11e68e1cec4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api-gateway_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180217099948:security-group/sg-0188364b463d2a93b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0188364b463d2a93b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8011,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-053a16903128e52b0"
                ],
                "self": false,
                "to_port": 8011
              }
            ],
            "name": "api-gateway-foo-dev-ecs-sg",
            "name_prefix": "",
            "owner_id": "180217099948",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a6d7849e76f02cab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb_sg.aws_security_group.security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "auth-service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180217099948:security-group/sg-07b74a99ab0472c27",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07b74a99ab0472c27",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8012,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-053a16903128e52b0",
                  "sg-09cef18ec0c392a92"
                ],
                "self": false,
                "to_port": 8012
              }
            ],
            "name": "auth-service-foo-dev-ecs-sg",
            "name_prefix": "",
            "owner_id": "180217099948",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a6d7849e76f02cab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.orchestration-service_sg",
            "module.lb_sg.aws_security_group.security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cart-service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180217099948:security-group/sg-08180193efb387d66",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08180193efb387d66",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8013,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-053a16903128e52b0",
                  "sg-09cef18ec0c392a92"
                ],
                "self": false,
                "to_port": 8013
              }
            ],
            "name": "cart-service-foo-dev-ecs-sg",
            "name_prefix": "",
            "owner_id": "180217099948",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a6d7849e76f02cab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.orchestration-service_sg",
            "module.lb_sg.aws_security_group.security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "discovery-service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180217099948:security-group/sg-0aa1f20f1d6a4e9e4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aa1f20f1d6a4e9e4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8010,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-053a16903128e52b0"
                ],
                "self": false,
                "to_port": 8010
              }
            ],
            "name": "discovery-service-foo-dev-ecs-sg",
            "name_prefix": "",
            "owner_id": "180217099948",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a6d7849e76f02cab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb_sg.aws_security_group.security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "orchestration-service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180217099948:security-group/sg-09cef18ec0c392a92",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09cef18ec0c392a92",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8014,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-053a16903128e52b0"
                ],
                "self": false,
                "to_port": 8014
              }
            ],
            "name": "orchestration-service-foo-dev-ecs-sg",
            "name_prefix": "",
            "owner_id": "180217099948",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a6d7849e76f02cab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb_sg.aws_security_group.security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "order-service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180217099948:security-group/sg-01c9dcfadb3802c23",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c9dcfadb3802c23",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8015,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-053a16903128e52b0",
                  "sg-09cef18ec0c392a92"
                ],
                "self": false,
                "to_port": 8015
              }
            ],
            "name": "order-service-foo-dev-ecs-sg",
            "name_prefix": "",
            "owner_id": "180217099948",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a6d7849e76f02cab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.orchestration-service_sg",
            "module.lb_sg.aws_security_group.security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "product-service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180217099948:security-group/sg-0674db40941ad0197",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0674db40941ad0197",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8016,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-053a16903128e52b0",
                  "sg-09cef18ec0c392a92"
                ],
                "self": false,
                "to_port": 8016
              }
            ],
            "name": "product-service-foo-dev-ecs-sg",
            "name_prefix": "",
            "owner_id": "180217099948",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a6d7849e76f02cab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.orchestration-service_sg",
            "module.lb_sg.aws_security_group.security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "user-service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180217099948:security-group/sg-09df61ac2689d9e44",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09df61ac2689d9e44",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-053a16903128e52b0",
                  "sg-09cef18ec0c392a92"
                ],
                "self": false,
                "to_port": 8017
              }
            ],
            "name": "user-service-foo-dev-ecs-sg",
            "name_prefix": "",
            "owner_id": "180217099948",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a6d7849e76f02cab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.orchestration-service_sg",
            "module.lb_sg.aws_security_group.security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.auth-service_http_listener_rule",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "forward_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:180217099948:targetgroup/auth-service-foo-dev-tg/cc79c1cd27c09944",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:180217099948:listener-rule/app/foo-dev-lb/7629d5b7626418dc/bc89a3116d509320/d774a21f37c17d8d",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/auth-service/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:180217099948:listener-rule/app/foo-dev-lb/7629d5b7626418dc/bc89a3116d509320/d774a21f37c17d8d",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:180217099948:listener/app/foo-dev-lb/7629d5b7626418dc/bc89a3116d509320",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.auth-service_target_group.aws_lb_target_group.target_group",
            "module.http_listener.aws_lb_listener.listener",
            "module.lb_sg.aws_security_group.security_group",
            "module.load_balancer.aws_lb.application_lb",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.auth-service_target_group",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:180217099948:targetgroup/auth-service-foo-dev-tg/cc79c1cd27c09944",
            "arn_suffix": "targetgroup/auth-service-foo-dev-tg/cc79c1cd27c09944",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:180217099948:targetgroup/auth-service-foo-dev-tg/cc79c1cd27c09944",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "auth-service-foo-dev-tg",
            "port": 8012,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a6d7849e76f02cab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.cart-service_http_listener_rule",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "forward_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:180217099948:targetgroup/cart-service-foo-dev-tg/5df92d4c248abaf3",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:180217099948:listener-rule/app/foo-dev-lb/7629d5b7626418dc/bc89a3116d509320/8bee9d17c1200174",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/cart-service/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:180217099948:listener-rule/app/foo-dev-lb/7629d5b7626418dc/bc89a3116d509320/8bee9d17c1200174",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:180217099948:listener/app/foo-dev-lb/7629d5b7626418dc/bc89a3116d509320",
            "priority": 4,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cart-service_target_group.aws_lb_target_group.target_group",
            "module.http_listener.aws_lb_listener.listener",
            "module.lb_sg.aws_security_group.security_group",
            "module.load_balancer.aws_lb.application_lb",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.cart-service_target_group",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:180217099948:targetgroup/cart-service-foo-dev-tg/5df92d4c248abaf3",
            "arn_suffix": "targetgroup/cart-service-foo-dev-tg/5df92d4c248abaf3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:180217099948:targetgroup/cart-service-foo-dev-tg/5df92d4c248abaf3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cart-service-foo-dev-tg",
            "port": 8013,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a6d7849e76f02cab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.http_listener",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:180217099948:listener/app/foo-dev-lb/7629d5b7626418dc/bc89a3116d509320",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Fixed response content",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:180217099948:listener/app/foo-dev-lb/7629d5b7626418dc/bc89a3116d509320",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:180217099948:loadbalancer/app/foo-dev-lb/7629d5b7626418dc",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb_sg.aws_security_group.security_group",
            "module.load_balancer.aws_lb.application_lb",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180217099948:internet-gateway/igw-0ae26cc9a990f57bf",
            "id": "igw-0ae26cc9a990f57bf",
            "owner_id": "180217099948",
            "tags": {
              "Name": "foo-dev-ig"
            },
            "tags_all": {
              "Name": "foo-dev-ig"
            },
            "vpc_id": "vpc-0a6d7849e76f02cab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb_egress_sg_rule",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1401171574",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-053a16903128e52b0",
            "security_group_rule_id": "sgr-0e17a125b33e26d05",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb_sg.aws_security_group.security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb_ingress_http_rule",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-3631166467",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-053a16903128e52b0",
            "security_group_rule_id": "sgr-02629f910643e3c07",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb_sg.aws_security_group.security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180217099948:security-group/sg-053a16903128e52b0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-053a16903128e52b0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "foo-dev-lb-sg",
            "name_prefix": "",
            "owner_id": "180217099948",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a6d7849e76f02cab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:180217099948:loadbalancer/app/foo-dev-lb/7629d5b7626418dc",
            "arn_suffix": "app/foo-dev-lb/7629d5b7626418dc",
            "desync_mitigation_mode": "defensive",
            "dns_name": "foo-dev-lb-1943702523.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:180217099948:loadbalancer/app/foo-dev-lb/7629d5b7626418dc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "foo-dev-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-053a16903128e52b0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07c09c7d4ecf40181"
              },
              {
                "subnet_id": "subnet-08fcc3194aade03a7"
              },
              {
                "subnet_id": "subnet-09cc791512fbc2993"
              },
              {
                "subnet_id": "subnet-09d7ee652cfa7a18d"
              },
              {
                "subnet_id": "subnet-0a8d20537312dc1b5"
              },
              {
                "subnet_id": "subnet-0d7d59f76e6437cab"
              }
            ],
            "subnets": [
              "subnet-07c09c7d4ecf40181",
              "subnet-08fcc3194aade03a7",
              "subnet-09cc791512fbc2993",
              "subnet-09d7ee652cfa7a18d",
              "subnet-0a8d20537312dc1b5",
              "subnet-0d7d59f76e6437cab"
            ],
            "vpc_id": "vpc-0a6d7849e76f02cab",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.lb_sg.aws_security_group.security_group",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f16e4b53c255ef37",
            "association_id": "eipassoc-035f2bb6c0b53272a",
            "domain": "vpc",
            "id": "eipalloc-0f16e4b53c255ef37",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06497d065b7a343fd",
            "private_dns": "ip-10-0-1-79.ec2.internal",
            "private_ip": "10.0.1.79",
            "public_dns": "ec2-3-225-172-102.compute-1.amazonaws.com",
            "public_ip": "3.225.172.102",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f16e4b53c255ef37",
            "association_id": "eipassoc-035f2bb6c0b53272a",
            "connectivity_type": "public",
            "id": "nat-09f084d0860d88880",
            "network_interface_id": "eni-06497d065b7a343fd",
            "private_ip": "10.0.1.79",
            "public_ip": "3.225.172.102",
            "subnet_id": "subnet-09cc791512fbc2993",
            "tags": {
              "Name": "foo-dev-natgw"
            },
            "tags_all": {
              "Name": "foo-dev-natgw"
            }
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.eip",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.orchestration-service_http_listener_rule",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "forward_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:180217099948:targetgroup/orchestration-service-foo-dev-tg/d8722723f52d9665",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:180217099948:listener-rule/app/foo-dev-lb/7629d5b7626418dc/bc89a3116d509320/94efa79659c8a4bf",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/orchestration-service/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:180217099948:listener-rule/app/foo-dev-lb/7629d5b7626418dc/bc89a3116d509320/94efa79659c8a4bf",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:180217099948:listener/app/foo-dev-lb/7629d5b7626418dc/bc89a3116d509320",
            "priority": 3,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.http_listener.aws_lb_listener.listener",
            "module.lb_sg.aws_security_group.security_group",
            "module.load_balancer.aws_lb.application_lb",
            "module.orchestration-service_target_group.aws_lb_target_group.target_group",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.orchestration-service_target_group",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:180217099948:targetgroup/orchestration-service-foo-dev-tg/d8722723f52d9665",
            "arn_suffix": "targetgroup/orchestration-service-foo-dev-tg/d8722723f52d9665",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:180217099948:targetgroup/orchestration-service-foo-dev-tg/d8722723f52d9665",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "orchestration-service-foo-dev-tg",
            "port": 8014,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a6d7849e76f02cab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.order-service_http_listener_rule",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "forward_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:180217099948:targetgroup/order-service-foo-dev-tg/ef605e9f4feff887",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:180217099948:listener-rule/app/foo-dev-lb/7629d5b7626418dc/bc89a3116d509320/1774a0108481c625",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/order-service/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:180217099948:listener-rule/app/foo-dev-lb/7629d5b7626418dc/bc89a3116d509320/1774a0108481c625",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:180217099948:listener/app/foo-dev-lb/7629d5b7626418dc/bc89a3116d509320",
            "priority": 6,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.http_listener.aws_lb_listener.listener",
            "module.lb_sg.aws_security_group.security_group",
            "module.load_balancer.aws_lb.application_lb",
            "module.order-service_target_group.aws_lb_target_group.target_group",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.order-service_target_group",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:180217099948:targetgroup/order-service-foo-dev-tg/ef605e9f4feff887",
            "arn_suffix": "targetgroup/order-service-foo-dev-tg/ef605e9f4feff887",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:180217099948:targetgroup/order-service-foo-dev-tg/ef605e9f4feff887",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "order-service-foo-dev-tg",
            "port": 8015,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a6d7849e76f02cab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_nat_gw_route",
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d38f4d4fd710e51c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09f084d0860d88880",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d38f4d4fd710e51c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway.aws_nat_gateway.gw",
            "module.private_route_table.aws_route_table.route_table"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180217099948:route-table/rtb-0d38f4d4fd710e51c",
            "id": "rtb-0d38f4d4fd710e51c",
            "owner_id": "180217099948",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09f084d0860d88880",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "foo-dev-private-table"
            },
            "tags_all": {
              "Name": "foo-dev-private-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6d7849e76f02cab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097fec92b4f703339",
            "route_table_id": "rtb-0d38f4d4fd710e51c",
            "subnet_id": "subnet-0e4811662492d0e62"
          },
          "dependencies": [
            "module.private_route_table.aws_route_table.route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad48ca77df00e05b",
            "route_table_id": "rtb-0d38f4d4fd710e51c",
            "subnet_id": "subnet-059e04cd81a091280"
          },
          "dependencies": [
            "module.private_route_table.aws_route_table.route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0214d5ccdca52a51d",
            "route_table_id": "rtb-0d38f4d4fd710e51c",
            "subnet_id": "subnet-0641590308a566c58"
          },
          "dependencies": [
            "module.private_route_table.aws_route_table.route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07848fdb2af80357d",
            "route_table_id": "rtb-0d38f4d4fd710e51c",
            "subnet_id": "subnet-0911e5e0970b0c9bd"
          },
          "dependencies": [
            "module.private_route_table.aws_route_table.route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09952d37f32735a48",
            "route_table_id": "rtb-0d38f4d4fd710e51c",
            "subnet_id": "subnet-0c6f6fa3a3ac2d963"
          },
          "dependencies": [
            "module.private_route_table.aws_route_table.route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005d5c981bf5f5c58",
            "route_table_id": "rtb-0d38f4d4fd710e51c",
            "subnet_id": "subnet-05738cc53c9b4a033"
          },
          "dependencies": [
            "module.private_route_table.aws_route_table.route_table",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.product-service_http_listener_rule",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "forward_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:180217099948:targetgroup/product-service-foo-dev-tg/6c7812e7e606a211",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:180217099948:listener-rule/app/foo-dev-lb/7629d5b7626418dc/bc89a3116d509320/dce8800ffebb40a6",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/product-service/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:180217099948:listener-rule/app/foo-dev-lb/7629d5b7626418dc/bc89a3116d509320/dce8800ffebb40a6",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:180217099948:listener/app/foo-dev-lb/7629d5b7626418dc/bc89a3116d509320",
            "priority": 2,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.http_listener.aws_lb_listener.listener",
            "module.lb_sg.aws_security_group.security_group",
            "module.load_balancer.aws_lb.application_lb",
            "module.product-service_target_group.aws_lb_target_group.target_group",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.product-service_target_group",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:180217099948:targetgroup/product-service-foo-dev-tg/6c7812e7e606a211",
            "arn_suffix": "targetgroup/product-service-foo-dev-tg/6c7812e7e606a211",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:180217099948:targetgroup/product-service-foo-dev-tg/6c7812e7e606a211",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "product-service-foo-dev-tg",
            "port": 8016,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a6d7849e76f02cab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_internet_gw_route",
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ae26cc9a990f57bf",
            "id": "r-rtb-0e6971db341a5c6861080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e6971db341a5c686",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.gw",
            "module.public_route_table.aws_route_table.route_table",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180217099948:route-table/rtb-0e6971db341a5c686",
            "id": "rtb-0e6971db341a5c686",
            "owner_id": "180217099948",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ae26cc9a990f57bf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "foo-dev-public-table"
            },
            "tags_all": {
              "Name": "foo-dev-public-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6d7849e76f02cab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bee2628cc1181bdd",
            "route_table_id": "rtb-0e6971db341a5c686",
            "subnet_id": "subnet-0d7d59f76e6437cab"
          },
          "dependencies": [
            "module.public_route_table.aws_route_table.route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f41b23f911a6b78",
            "route_table_id": "rtb-0e6971db341a5c686",
            "subnet_id": "subnet-09cc791512fbc2993"
          },
          "dependencies": [
            "module.public_route_table.aws_route_table.route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf78ee7aefb0f4e1",
            "route_table_id": "rtb-0e6971db341a5c686",
            "subnet_id": "subnet-07c09c7d4ecf40181"
          },
          "dependencies": [
            "module.public_route_table.aws_route_table.route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0749ed18d7620ffdd",
            "route_table_id": "rtb-0e6971db341a5c686",
            "subnet_id": "subnet-0a8d20537312dc1b5"
          },
          "dependencies": [
            "module.public_route_table.aws_route_table.route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f46c146210b0fc1",
            "route_table_id": "rtb-0e6971db341a5c686",
            "subnet_id": "subnet-08fcc3194aade03a7"
          },
          "dependencies": [
            "module.public_route_table.aws_route_table.route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065e5136ac79f0d45",
            "route_table_id": "rtb-0e6971db341a5c686",
            "subnet_id": "subnet-09d7ee652cfa7a18d"
          },
          "dependencies": [
            "module.public_route_table.aws_route_table.route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.user-service_http_listener_rule",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "forward_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:180217099948:targetgroup/user-service-foo-dev-tg/36bd12fdf26412a6",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:180217099948:listener-rule/app/foo-dev-lb/7629d5b7626418dc/bc89a3116d509320/74814db73c058219",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/user-service/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:180217099948:listener-rule/app/foo-dev-lb/7629d5b7626418dc/bc89a3116d509320/74814db73c058219",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:180217099948:listener/app/foo-dev-lb/7629d5b7626418dc/bc89a3116d509320",
            "priority": 5,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.http_listener.aws_lb_listener.listener",
            "module.lb_sg.aws_security_group.security_group",
            "module.load_balancer.aws_lb.application_lb",
            "module.user-service_target_group.aws_lb_target_group.target_group",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.user-service_target_group",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:180217099948:targetgroup/user-service-foo-dev-tg/36bd12fdf26412a6",
            "arn_suffix": "targetgroup/user-service-foo-dev-tg/36bd12fdf26412a6",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:180217099948:targetgroup/user-service-foo-dev-tg/36bd12fdf26412a6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "user-service-foo-dev-tg",
            "port": 8017,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a6d7849e76f02cab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180217099948:subnet/subnet-0e4811662492d0e62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4811662492d0e62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180217099948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private"
            },
            "tags_all": {
              "Name": "Private"
            },
            "vpc_id": "vpc-0a6d7849e76f02cab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180217099948:subnet/subnet-059e04cd81a091280",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059e04cd81a091280",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180217099948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private"
            },
            "tags_all": {
              "Name": "Private"
            },
            "vpc_id": "vpc-0a6d7849e76f02cab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180217099948:subnet/subnet-0641590308a566c58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0641590308a566c58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180217099948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private"
            },
            "tags_all": {
              "Name": "Private"
            },
            "vpc_id": "vpc-0a6d7849e76f02cab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180217099948:subnet/subnet-0911e5e0970b0c9bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0911e5e0970b0c9bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180217099948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private"
            },
            "tags_all": {
              "Name": "Private"
            },
            "vpc_id": "vpc-0a6d7849e76f02cab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180217099948:subnet/subnet-0c6f6fa3a3ac2d963",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.14.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6f6fa3a3ac2d963",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180217099948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private"
            },
            "tags_all": {
              "Name": "Private"
            },
            "vpc_id": "vpc-0a6d7849e76f02cab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180217099948:subnet/subnet-05738cc53c9b4a033",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.15.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05738cc53c9b4a033",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180217099948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private"
            },
            "tags_all": {
              "Name": "Private"
            },
            "vpc_id": "vpc-0a6d7849e76f02cab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180217099948:subnet/subnet-0d7d59f76e6437cab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7d59f76e6437cab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "180217099948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public"
            },
            "tags_all": {
              "Name": "Public"
            },
            "vpc_id": "vpc-0a6d7849e76f02cab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180217099948:subnet/subnet-09cc791512fbc2993",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09cc791512fbc2993",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "180217099948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public"
            },
            "tags_all": {
              "Name": "Public"
            },
            "vpc_id": "vpc-0a6d7849e76f02cab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180217099948:subnet/subnet-07c09c7d4ecf40181",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c09c7d4ecf40181",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "180217099948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public"
            },
            "tags_all": {
              "Name": "Public"
            },
            "vpc_id": "vpc-0a6d7849e76f02cab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180217099948:subnet/subnet-0a8d20537312dc1b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8d20537312dc1b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "180217099948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public"
            },
            "tags_all": {
              "Name": "Public"
            },
            "vpc_id": "vpc-0a6d7849e76f02cab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180217099948:subnet/subnet-08fcc3194aade03a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fcc3194aade03a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "180217099948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public"
            },
            "tags_all": {
              "Name": "Public"
            },
            "vpc_id": "vpc-0a6d7849e76f02cab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180217099948:subnet/subnet-09d7ee652cfa7a18d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d7ee652cfa7a18d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "180217099948",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public"
            },
            "tags_all": {
              "Name": "Public"
            },
            "vpc_id": "vpc-0a6d7849e76f02cab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180217099948:vpc/vpc-0a6d7849e76f02cab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08b7dafadd5dd01f9",
            "default_route_table_id": "rtb-0b9fdf42e12720a5e",
            "default_security_group_id": "sg-01eb02500d797b419",
            "dhcp_options_id": "dopt-0843746fba3d5c033",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a6d7849e76f02cab",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b9fdf42e12720a5e",
            "owner_id": "180217099948",
            "tags": {
              "Name": "foo-dev-vpc"
            },
            "tags_all": {
              "Name": "foo-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}